--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.16.12
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=template
+maven_group=com.iamhere
+archives_base_name=iamhere
 
 # Dependencies
 fabric_version=0.121.0+1.21.5
